fix: change home page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
     "@prisma/client": "^6.5.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4.0.12",
